envoy/test.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
          http_filters:
          - name: envoy.filters.http.local_ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              stat_prefix: http_local_rate_limiter
              token_bucket:
                max_tokens: 1000
                tokens_per_fill: 1000
                fill_interval: 5s
              filter_enabled:
                runtime_key: local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: local_rate_limit_enforced
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              local_rate_limit_per_downstream_connection: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    protocol_selection: USE_CONFIGURED_PROTOCOL
    http2_protocol_options: {}
    load_assignment:
      cluster_name: service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 50051
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901




# admin:
#   address:
#     socket_address:
#       address: 0.0.0.0
#       port_value: 9901
# static_resources:
#   clusters:
#     - name: ratelimit
#       type: STRICT_DNS
#       connect_timeout: 0.25s
#       lb_policy: ROUND_ROBIN
#       protocol_selection: USE_CONFIGURED_PROTOCOL
#       http2_protocol_options: {}
#       load_assignment:
#         cluster_name: ratelimit
#         endpoints:
#           - lb_endpoints:
#               - endpoint:
#                   address:
#                     socket_address:
#                       address: 127.0.0.1
#                       port_value: 50051
#   listeners:
#     - address:
#         socket_address:
#           address: 127.0.0.1
#           port_value: 10000
#       filter_chains:
#         - filters:
#             - name: envoy.filters.network.http_connection_manager
#               typed_config:
#                 "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#                 codec_type: AUTO
#                 stat_prefix: ingress
#                 http_filters:
#                   - name: envoy.filters.http.ratelimit
#                     typed_config:
#                       "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
#                       domain: rl
#                       timeout: 1s
#                       request_type: both
#                       stage: 0
#                       rate_limited_as_resource_exhausted: true
#                       failure_mode_deny: false
#                       enable_x_ratelimit_headers: DRAFT_VERSION_03
#                       rate_limit_service:
#                         grpc_service:
#                           envoy_grpc:
#                             cluster_name: ratelimit
#                         transport_api_version: V3
#                   - name: envoy.filters.http.router
#                     typed_config:
#                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
#                 route_config:
#                   name: route
#                   virtual_hosts:
#                     - name: backend
#                       domains:
#                         - "*"
#                       routes:






# admin:
#   address:
#     socket_address: { address: 0.0.0.0, port_value: 9901 }
# static_resources:
#   listeners:
#   - name: listener_0
#     address:
#       socket_address: { address: 127.0.0.1, port_value: 10000 }
#     filter_chains:
#     - filters:
#       - name: envoy.http_connection_manager
#         typed_config:
#           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#           codec_type: auto
#           stat_prefix: ingress_http
#           route_config:
#             name: local_route
#             virtual_hosts:
#             - name: local_service
#               domains: ["*"]
#               routes:
#               - match: { prefix: "/" }
#                 route: { cluster: echo_service }
#           http_filters:
#           - name: envoy.grpc_web
#             typed_config:
#               "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
#           - name: envoy.filters.http.router
#             typed_config:
#               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
#   clusters:
#   - name: echo_service
#     connect_timeout: 0.25s
#     type: LOGICAL_DNS
      http2_protocol_options: {}
#     protocol_selection: USE_CONFIGURED_PROTOCOL
#     lb_policy: ROUND_ROBIN
#     load_assignment:
#       cluster_name: echo_service
#       endpoints:
#         - lb_endpoints:
#           - endpoint:
#               address:
#                 socket_address:
#                   address: 127.0.0.1
#                   port_value: 50051
